Bump spring til 3.5.15, java til 25, div andre avhengigheter