@@ -10,18 +10,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.13</version>
+        <version>3.5.15</version>
     </parent>
 
     <properties>
-        <java.version>21</java.version>
-        <opensearch.version>2.17.1</opensearch.version>
+        <java.version>25</java.version>
+        <opensearch.version>2.19.5</opensearch.version>
         <guava.version>33.4.8-jre</guava.version>
-        <prometheus.version>0.16.0</prometheus.version>
-        <micrometer.version>1.15.3</micrometer.version>
         <logstash.version>8.1</logstash.version>
-        <rest-assured.version>5.5.0</rest-assured.version>
-        <hamcrest.version>3.0</hamcrest.version>
+        <rest-assured.version>5.5.7</rest-assured.version>
     </properties>
 
     <dependencies>
@@ -79,6 +76,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -93,18 +91,11 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest</artifactId>
-            <version>${hamcrest.version}</version>
+            <artifactId>hamcrest-library</artifactId>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
-            <version>${micrometer.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient_hotspot</artifactId>
-            <version>${prometheus.version}</version>
         </dependency>
         <dependency>
             <groupId>net.logstash.logback</groupId>
@@ -125,9 +116,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <folders>src/test/resources</folders>
                     <useTestClasspath>true</useTestClasspath>
                     <profiles>dev</profiles>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- ByteBuddyMockMaker (non-inline) for Mockito on Java 21+; see src/test/resources/mockito-extensions/ -->
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
